--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Premier League Fixture</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="list_of_matches">Показать матчи</string>
+    <string name="All_matches">Все матчи</string>
+    <string name="Match_information">Информация о матче</string>
 </resources>
